; ModuleID = '/home/carl/AnghaBench/netdata/tests/profile/extr_benchmark-procfile-parser.c_begin_tsc.c'
source_filename = "/home/carl/AnghaBench/netdata/tests/profile/extr_benchmark-procfile-parser.c_begin_tsc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tsc = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @begin_tsc() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = call { i64, i64 } asm sideeffect "cpuid\0Ardtsc", "={ax},={dx},0,~{ebx},~{ecx},~{dirflag},~{fpsr},~{flags}"(i64 0) #1, !srcloc !2
  %4 = extractvalue { i64, i64 } %3, 0
  %5 = extractvalue { i64, i64 } %3, 1
  store i64 %4, i64* %1, align 8
  store i64 %5, i64* %2, align 8
  %6 = load i64, i64* %2, align 8
  %7 = shl i64 %6, 32
  %8 = load i64, i64* %1, align 8
  %9 = or i64 %7, %8
  store i64 %9, i64* @tsc, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 216, i32 224}
